scss/_toc.scss
@import "config";

@mixin toc($theme) {
    .lia-toc {
        $bg: map-get($theme, background);
        $fg: color-contrast($bg);

        @include flex(column, nowrap, flex-start, stretch, stretch);
        width: map-get($config, toc-width);
        position: relative;
        background: mix($bg, $fg, 95%);

        &::after {
            content: "";
            position: absolute;
            display: block;
            width: map-get($config, spacing-small);
            top: map-get($config, toolbar-height);
            bottom: 0;
            right: 0;
            cursor: ew-resize;
            background: mix($bg, $fg, 90%);
        }

        .lia-toolbar {
            $bg: map-get($theme, primary);
            $fg: color-contrast($bg);

            @include flex(column, nowrap, flex-start, stretch, stretch);

            input.lia-search {
                $placeholder: mix($bg, $fg, 40%);
                flex: 1 1 auto;
                padding-left: 1.75em;

                &::-webkit-input-placeholder { /* WebKit, Blink, Edge */
                    color: $placeholder;
                }

                &::-moz-placeholder { /* Mozilla Firefox 19+ */
                    color: $placeholder;
                    opacity: 1;
                }

                &::-ms-input-placeholder { /* Microsoft Edge */
                    color: $placeholder;
                }
            }

            &::after {
                @include material-icon(search, 16px);
                line-height: 2em;
                position: absolute;
                margin: map-get($config, spacing-normal);
                color: rgba($fg, 0.75);
                padding-left: map-get($config, spacing-icon);
            }
        }

        .lia-content {
            $bg: map-get($theme, background);
            $fg: color-contrast($bg);

            @include flex(column, nowrap);
            overflow: auto;
            margin-right: map-get($config, spacing-small);
            padding: map-get($config, spacing-normal);
            flex: 1 1 auto;

            a {
                width: 100%;
                white-space: nowrap;
                margin-bottom: map-get($config, spacing-normal);
                text-decoration: none;

                &:link {
                    $col: mix($fg, $bg, 80%);
                    color: $col;

                    &:hover {
                        color: lighten($col, 20%);
                    }

                    &:active {
                        color: darken($col, 20%);
                    }
                }

                &:visited {
                    $col: $fg;
                    color: $col;

                    &:hover {
                        color: lighten($col, 20%);
                    }

                    &:active {
                        color: darken($col, 20%);
                    }
                }

                &.lia-active {
                    $col: map-get($theme, primary);
                    font-weight: map-get($theme, highlight-weight);
                    color: $col;

                    &:hover {
                        color: lighten($col, 20%);
                    }

                    &:active {
                        color: darken($col, 20%);
                    }
                }

                &.lia-toc-l {
                    &1 { padding-left: 0 * map-get($config, spacing-large); }
                    &2 { padding-left: 1 * map-get($config, spacing-large); }
                    &3 { padding-left: 2 * map-get($config, spacing-large); }
                    &4 { padding-left: 3 * map-get($config, spacing-large); }
                    &5 { padding-left: 4 * map-get($config, spacing-large); }
                    &6 { padding-left: 5 * map-get($config, spacing-large); }
                }
            }
        }
    }
}

